--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <meta charset="UTF-8">
 <title>My first Page</title>
 </head>
+ 
 <body>
-<p> This is my Main code</p>
+<p>Welcome. This is my Main code</p>
 <footer>
 <p>think of a more interesting footer</p>
 </footer>
